add index and gitignore

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <li>Sed, beatae dignissimos alias deserunt corporis ipsa modi omnis laboriosam?</li>
     <li>Nam esse architecto unde quaerat eius earum, reprehenderit itaque eaque?</li>
     <li>Distinctio nulla dolor expedita earum quam dolore labore quae aperiam!</li>
+    <li>Distinctio nulla dolor expedita earum quam dolore labore quae aperiam!</li>
   </ul>
 </body>
 </html>
